<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.cs360_charlton_molloy_keir.FirstFragment"
        android:label="@string/login_title"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>

    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.cs360_charlton_molloy_keir.SecondFragment"
        android:label="@string/history_title"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_SmsFragment"
            app:destination="@id/SmsFragment" />
    </fragment>

    <fragment
        android:id="@+id/SmsFragment"
        android:name="com.example.cs360_charlton_molloy_keir.SmsFragment"
        android:label="@string/sms_title"
        tools:layout="@layout/fragment_sms" />
</navigation>
